--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.6.3",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
@@ -62,6 +63,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "glob-all": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
